--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@rn-primitives/select": "^1.0.5",
+    "@rn-primitives/slot": "^1.0.4",
+    "@rn-primitives/types": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.28",
@@ -29,6 +32,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.446.0",
     "nativewind": "^4.1.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
