--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -2,5 +2,6 @@ Django==5.1.*
 django-debug-toolbar==4.4.*
 django-environ==0.11.*
 django-extensions==3.2.*
+django-import-export==4.1.*
 ipython==8.28.*
 psycopg[binary]==3.2.*
