--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -2,6 +2,8 @@ Django==5.1.*
 django-debug-toolbar==4.4.*
 django-environ==0.11.*
 django-extensions==3.2.*
+django-filter==24.3
 django-import-export==4.1.*
+djangorestframework==3.15.*
 ipython==8.28.*
 psycopg[binary]==3.2.*
