--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,3 +1,4 @@
+coverage==7.6.*
 Django==5.1.*
 django-debug-toolbar==4.4.*
 django-environ==0.11.*
@@ -5,5 +6,10 @@ django-extensions==3.2.*
 django-filter==24.3
 django-import-export==4.1.*
 djangorestframework==3.15.*
+flake8==7.1.*
 ipython==8.28.*
 psycopg[binary]==3.2.*
+pytest==8.3.*
+pytest-cov==5.0.*
+pytest-django==4.9.*
+pytest-mock==3.14.*
