--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -6,8 +6,10 @@ django-extensions==3.2.*
 django-filter==24.3
 django-import-export==4.1.*
 djangorestframework==3.15.*
+django-storages==1.14.*
 flake8==7.1.*
 ipython==8.28.*
+pillow==11.0.*
 psycopg[binary]==3.2.*
 pytest==8.3.*
 pytest-cov==5.0.*
