create cache and error handling to avoid repeat failed requests

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -4,3 +4,4 @@ GOOGLE_CLIENT_SECRET="GOOGLE_CLIENT_SECRET"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-nextauth-secret"
 API_URL="http://localhost:8000"
+NEXT_PUBLIC_API_URL="http://localhost:8000"
