--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,5 +1,6 @@
 coverage==7.6.*
 Django==5.1.*
+django-cors-headers==4.3.*
 django-debug-toolbar==4.4.*
 django-environ==0.11.*
 django-extensions==3.2.*
