--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -1,4 +1,5 @@
 ALLOWED_HOSTS=*
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 CSRF_COOKIE_SECURE=False
 DATABASE_URL=postgres://btsh:btsh@postgres:5432/btsh
 DEBUG=False
