--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -5,3 +5,4 @@ NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-nextauth-secret"
 API_URL="http://localhost:8000"
 NEXT_PUBLIC_API_URL="http://localhost:8000"
+CORS_ALLOWED_ORIGINS="http://localhost:3000"
