--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.15.*
 django-storages==1.14.*
 flake8==7.1.*
 ipython==8.28.*
+mimesis==18.0.*
 pillow==11.0.*
 psycopg[binary]==3.2.*
 pytest==8.3.*
