--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -8,6 +8,7 @@ django-filter==24.3
 django-import-export==4.1.*
 djangorestframework==3.15.*
 django-storages==1.14.*
+drf-spectacular==0.27.*
 flake8==7.1.*
 ipython==8.28.*
 mimesis==18.0.*
