--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-table": "^7.8.0",
     "recharts": "^2.13.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
