Fix flake issues, exclude game players from game ref selection when simulating games

--- a/apps/api/setup.cfg
+++ b/apps/api/setup.cfg
@@ -8,6 +8,8 @@ extend-exclude =
     media,
     migrations,
     venv
+extend-ignore =
+    C901
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = api.settings
